--- a/.github/workflows/refresh.yml
+++ b/.github/workflows/refresh.yml
@@ -2,32 +2,28 @@ name: PhoenixNode Auto-Update
 
 on:
   schedule:
-    - cron: '*/15 * * * *'  # Runs every 15 minutes
+    - cron: "*/15 * * * *"  # Every 15 minutes
   workflow_dispatch:
 
 jobs:
   update-feed:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout Repo
         uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: 3.10
 
-      - name: Install dependencies
-        run: pip install requests
+      - name: Run Dashboard Update
+        run: python update_dashboard.py
 
-      - name: Generate updated dashboard feed
+      - name: Commit and Push Changes
         run: |
-          python update_dashboard.py
-
-      - name: Commit and push updates
-        run: |
-          git config user.name "phoenixnode-bot"
-          git config user.email "bot@phoenixnode.ai"
+          git config user.name "PhoenixNode AutoBot"
+          git config user.email "actions@github.com"
           git add PhoenixNode_DashboardFeed.json
-          git commit -m "🔁 Auto-update DashboardFeed.json"
+          git commit -m "🔄 Auto update dashboard feed"
           git push
