--- a/.github/workflows/refresh.yml
+++ b/.github/workflows/refresh.yml
@@ -2,28 +2,30 @@ name: PhoenixNode Auto-Update
 
 on:
   schedule:
-    - cron: "*/15 * * * *"  # Every 15 minutes
+    - cron: "*/2 * * * *"  # Runs every 2 minutes
   workflow_dispatch:
 
 jobs:
-  update-feed:
+  refresh:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repo
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.10
-
-      - name: Run Dashboard Update
-        run: python update_dashboard.py
-
-      - name: Commit and Push Changes
+      - name: Generate new status feed
         run: |
-          git config user.name "PhoenixNode AutoBot"
-          git config user.email "actions@github.com"
-          git add PhoenixNode_DashboardFeed.json
-          git commit -m "🔄 Auto update dashboard feed"
+          echo "{
+            \"timestamp\": \"$(date -u +"%Y-%m-%dT%H:%M:%SZ")\",
+            \"deribit\": { \"momentum\": \"neutral\" },
+            \"bridges\": { \"status\": \"stable\" },
+            \"wallets\": { \"activity\": \"normal\" },
+            \"deltaSignal\": 0.02
+          }" > status.json
+
+      - name: Commit and push
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add status.json
+          git commit -m "⏱️ Update status feed"
           git push
