--- a/.github/workflows/auto-sync.yml
+++ b/.github/workflows/auto-sync.yml
@@ -1,1 +1,25 @@
-name: Auto Sync to GitHub Pages\n\non:\n  push:\n    branches:\n      - main\n  schedule:\n    - cron: '*/15 * * * *'\n\njobs:\n  build:\n    runs-on: ubuntu-latest\n    steps:\n      - uses: actions/checkout@v3\n      - name: Setup Pages\n        uses: actions/configure-pages@v2\n      - name: Deploy Pages\n        uses: actions/upload-pages-artifact@v1\n      - name: Trigger GitHub Pages Deploy\n        run: |\n          curl -X POST -H "Accept: application/vnd.github+json" \\n               -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \\n               https://api.github.com/repos/${{ github.repository }}/pages/builds
+name: 🔁 Auto Sync to GitHub Pages
+
+on:
+  push:
+    branches:
+      - main
+  schedule:
+    - cron: "*/15 * * * *"  # Every 15 minutes
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v2
+
+      - name: Upload Artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: .  # This uploads your entire repo contents
+
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v2
